Project5/Project5/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    WHITESPACE
    COMMENT

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> <empty>
Rule 3     statements -> statements statement
Rule 4     statement -> scopeupbro { statements }
Rule 5     statement -> COMMAND_BREAK ;
Rule 6     scopeupbro -> <empty>
Rule 7     statement -> ;
Rule 8     statement -> expression ;
Rule 9     statement -> declaration ;
Rule 10    statement -> print_statement ;
Rule 11    print_statement -> COMMAND_PRINT ( non_empty_comma_sep_expr )
Rule 12    non_empty_comma_sep_expr -> expression
Rule 13    non_empty_comma_sep_expr -> expression , non_empty_comma_sep_expr
Rule 14    declaration -> simple_declaration
Rule 15    declaration -> assign_declaration
Rule 16    simple_declaration -> type ID
Rule 17    assign_declaration -> simple_declaration = expression
Rule 18    statement -> COMMAND_IF ( expression ) statement
Rule 19    statement -> COMMAND_IF ( expression ) statement COMMAND_ELSE statement
Rule 20    statement -> COMMAND_WHILE ( expression ) statement
Rule 21    var_usage -> ID
Rule 22    expression -> var_usage = expression
Rule 23    expression -> var_usage ASSIGN_ADD expression
Rule 24    expression -> var_usage ASSIGN_SUB expression
Rule 25    expression -> var_usage ASSIGN_MULT expression
Rule 26    expression -> var_usage ASSIGN_DIV expression
Rule 27    expression -> var_usage
Rule 28    expression -> COMMAND_RANDOM ( expression )
Rule 29    type -> TYPE
Rule 30    type -> ALIAS_TYPE
Rule 31    type -> META_TYPE ( type )
Rule 32    expression -> expression BOOL_AND expression
Rule 33    expression -> expression BOOL_OR expression
Rule 34    expression -> VAL_LITERAL
Rule 35    expression -> CHAR_LITERAL
Rule 36    expression -> STRING_LITERAL
Rule 37    expression -> expression - expression
Rule 38    expression -> expression * expression
Rule 39    expression -> expression / expression
Rule 40    expression -> expression + expression
Rule 41    expression -> expression COMP_EQU expression
Rule 42    expression -> expression COMP_NEQU expression
Rule 43    expression -> - expression
Rule 44    expression -> ! expression
Rule 45    expression -> expression COMP_LESS expression
Rule 46    expression -> expression COMP_GTR expression
Rule 47    expression -> expression COMP_LTE expression
Rule 48    expression -> expression COMP_GTE expression
Rule 49    expression -> ( expression )

Terminals, with rules where they appear

!                    : 44
(                    : 11 18 19 20 28 31 49
)                    : 11 18 19 20 28 31 49
*                    : 38
+                    : 40
,                    : 13
-                    : 37 43
/                    : 39
;                    : 5 7 8 9 10
=                    : 17 22
ALIAS_TYPE           : 30
ASSIGN_ADD           : 23
ASSIGN_DIV           : 26
ASSIGN_MULT          : 25
ASSIGN_SUB           : 24
BOOL_AND             : 32
BOOL_OR              : 33
CHAR_LITERAL         : 35
COMMAND_BREAK        : 5
COMMAND_ELSE         : 19
COMMAND_IF           : 18 19
COMMAND_PRINT        : 11
COMMAND_RANDOM       : 28
COMMAND_WHILE        : 20
COMMENT              : 
COMP_EQU             : 41
COMP_GTE             : 48
COMP_GTR             : 46
COMP_LESS            : 45
COMP_LTE             : 47
COMP_NEQU            : 42
ID                   : 16 21
META_TYPE            : 31
STRING_LITERAL       : 36
TYPE                 : 29
VAL_LITERAL          : 34
WHITESPACE           : 
error                : 
{                    : 4
}                    : 4

Nonterminals, with rules where they appear

assign_declaration   : 15
declaration          : 9
expression           : 8 12 13 17 18 19 20 22 23 24 25 26 28 32 32 33 33 37 37 38 38 39 39 40 40 41 41 42 42 43 44 45 45 46 46 47 47 48 48 49
non_empty_comma_sep_expr : 11 13
print_statement      : 10
program              : 0
scopeupbro           : 4
simple_declaration   : 14 17
statement            : 3 18 19 19 20
statements           : 1 3 4
type                 : 16 31
var_usage            : 22 23 24 25 26 27

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> .
    (3) statements -> . statements statement

    COMMAND_BREAK   reduce using rule 2 (statements -> .)
    ;               reduce using rule 2 (statements -> .)
    COMMAND_IF      reduce using rule 2 (statements -> .)
    COMMAND_WHILE   reduce using rule 2 (statements -> .)
    COMMAND_RANDOM  reduce using rule 2 (statements -> .)
    VAL_LITERAL     reduce using rule 2 (statements -> .)
    CHAR_LITERAL    reduce using rule 2 (statements -> .)
    STRING_LITERAL  reduce using rule 2 (statements -> .)
    -               reduce using rule 2 (statements -> .)
    !               reduce using rule 2 (statements -> .)
    (               reduce using rule 2 (statements -> .)
    COMMAND_PRINT   reduce using rule 2 (statements -> .)
    ID              reduce using rule 2 (statements -> .)
    TYPE            reduce using rule 2 (statements -> .)
    ALIAS_TYPE      reduce using rule 2 (statements -> .)
    META_TYPE       reduce using rule 2 (statements -> .)
    {               reduce using rule 2 (statements -> .)
    $end            reduce using rule 2 (statements -> .)

    statements                     shift and go to state 1
    program                        shift and go to state 2

state 1

    (1) program -> statements .
    (3) statements -> statements . statement
    (4) statement -> . scopeupbro { statements }
    (5) statement -> . COMMAND_BREAK ;
    (7) statement -> . ;
    (8) statement -> . expression ;
    (9) statement -> . declaration ;
    (10) statement -> . print_statement ;
    (18) statement -> . COMMAND_IF ( expression ) statement
    (19) statement -> . COMMAND_IF ( expression ) statement COMMAND_ELSE statement
    (20) statement -> . COMMAND_WHILE ( expression ) statement
    (6) scopeupbro -> .
    (22) expression -> . var_usage = expression
    (23) expression -> . var_usage ASSIGN_ADD expression
    (24) expression -> . var_usage ASSIGN_SUB expression
    (25) expression -> . var_usage ASSIGN_MULT expression
    (26) expression -> . var_usage ASSIGN_DIV expression
    (27) expression -> . var_usage
    (28) expression -> . COMMAND_RANDOM ( expression )
    (32) expression -> . expression BOOL_AND expression
    (33) expression -> . expression BOOL_OR expression
    (34) expression -> . VAL_LITERAL
    (35) expression -> . CHAR_LITERAL
    (36) expression -> . STRING_LITERAL
    (37) expression -> . expression - expression
    (38) expression -> . expression * expression
    (39) expression -> . expression / expression
    (40) expression -> . expression + expression
    (41) expression -> . expression COMP_EQU expression
    (42) expression -> . expression COMP_NEQU expression
    (43) expression -> . - expression
    (44) expression -> . ! expression
    (45) expression -> . expression COMP_LESS expression
    (46) expression -> . expression COMP_GTR expression
    (47) expression -> . expression COMP_LTE expression
    (48) expression -> . expression COMP_GTE expression
    (49) expression -> . ( expression )
    (14) declaration -> . simple_declaration
    (15) declaration -> . assign_declaration
    (11) print_statement -> . COMMAND_PRINT ( non_empty_comma_sep_expr )
    (21) var_usage -> . ID
    (16) simple_declaration -> . type ID
    (17) assign_declaration -> . simple_declaration = expression
    (29) type -> . TYPE
    (30) type -> . ALIAS_TYPE
    (31) type -> . META_TYPE ( type )

    $end            reduce using rule 1 (program -> statements .)
    COMMAND_BREAK   shift and go to state 12
    ;               shift and go to state 3
    COMMAND_IF      shift and go to state 22
    COMMAND_WHILE   shift and go to state 19
    {               reduce using rule 6 (scopeupbro -> .)
    COMMAND_RANDOM  shift and go to state 13
    VAL_LITERAL     shift and go to state 24
    CHAR_LITERAL    shift and go to state 21
    STRING_LITERAL  shift and go to state 11
    -               shift and go to state 27
    !               shift and go to state 9
    (               shift and go to state 6
    COMMAND_PRINT   shift and go to state 15
    ID              shift and go to state 26
    TYPE            shift and go to state 5
    ALIAS_TYPE      shift and go to state 7
    META_TYPE       shift and go to state 14

    var_usage                      shift and go to state 10
    statement                      shift and go to state 25
    type                           shift and go to state 8
    expression                     shift and go to state 4
    declaration                    shift and go to state 16
    simple_declaration             shift and go to state 23
    scopeupbro                     shift and go to state 18
    print_statement                shift and go to state 20
    assign_declaration             shift and go to state 17

state 2

    (0) S' -> program .



state 3

    (7) statement -> ; .

    COMMAND_BREAK   reduce using rule 7 (statement -> ; .)
    ;               reduce using rule 7 (statement -> ; .)
    COMMAND_IF      reduce using rule 7 (statement -> ; .)
    COMMAND_WHILE   reduce using rule 7 (statement -> ; .)
    COMMAND_RANDOM  reduce using rule 7 (statement -> ; .)
    VAL_LITERAL     reduce using rule 7 (statement -> ; .)
    CHAR_LITERAL    reduce using rule 7 (statement -> ; .)
    STRING_LITERAL  reduce using rule 7 (statement -> ; .)
    -               reduce using rule 7 (statement -> ; .)
    !               reduce using rule 7 (statement -> ; .)
    (               reduce using rule 7 (statement -> ; .)
    COMMAND_PRINT   reduce using rule 7 (statement -> ; .)
    ID              reduce using rule 7 (statement -> ; .)
    TYPE            reduce using rule 7 (statement -> ; .)
    ALIAS_TYPE      reduce using rule 7 (statement -> ; .)
    META_TYPE       reduce using rule 7 (statement -> ; .)
    {               reduce using rule 7 (statement -> ; .)
    $end            reduce using rule 7 (statement -> ; .)
    }               reduce using rule 7 (statement -> ; .)
    COMMAND_ELSE    reduce using rule 7 (statement -> ; .)


state 4

    (8) statement -> expression . ;
    (32) expression -> expression . BOOL_AND expression
    (33) expression -> expression . BOOL_OR expression
    (37) expression -> expression . - expression
    (38) expression -> expression . * expression
    (39) expression -> expression . / expression
    (40) expression -> expression . + expression
    (41) expression -> expression . COMP_EQU expression
    (42) expression -> expression . COMP_NEQU expression
    (45) expression -> expression . COMP_LESS expression
    (46) expression -> expression . COMP_GTR expression
    (47) expression -> expression . COMP_LTE expression
    (48) expression -> expression . COMP_GTE expression

    ;               shift and go to state 31
    BOOL_AND        shift and go to state 35
    BOOL_OR         shift and go to state 32
    -               shift and go to state 40
    *               shift and go to state 34
    /               shift and go to state 37
    +               shift and go to state 29
    COMP_EQU        shift and go to state 33
    COMP_NEQU       shift and go to state 38
    COMP_LESS       shift and go to state 28
    COMP_GTR        shift and go to state 39
    COMP_LTE        shift and go to state 36
    COMP_GTE        shift and go to state 30


state 5

    (29) type -> TYPE .

    ID              reduce using rule 29 (type -> TYPE .)
    )               reduce using rule 29 (type -> TYPE .)


state 6

    (49) expression -> ( . expression )
    (22) expression -> . var_usage = expression
    (23) expression -> . var_usage ASSIGN_ADD expression
    (24) expression -> . var_usage ASSIGN_SUB expression
    (25) expression -> . var_usage ASSIGN_MULT expression
    (26) expression -> . var_usage ASSIGN_DIV expression
    (27) expression -> . var_usage
    (28) expression -> . COMMAND_RANDOM ( expression )
    (32) expression -> . expression BOOL_AND expression
    (33) expression -> . expression BOOL_OR expression
    (34) expression -> . VAL_LITERAL
    (35) expression -> . CHAR_LITERAL
    (36) expression -> . STRING_LITERAL
    (37) expression -> . expression - expression
    (38) expression -> . expression * expression
    (39) expression -> . expression / expression
    (40) expression -> . expression + expression
    (41) expression -> . expression COMP_EQU expression
    (42) expression -> . expression COMP_NEQU expression
    (43) expression -> . - expression
    (44) expression -> . ! expression
    (45) expression -> . expression COMP_LESS expression
    (46) expression -> . expression COMP_GTR expression
    (47) expression -> . expression COMP_LTE expression
    (48) expression -> . expression COMP_GTE expression
    (49) expression -> . ( expression )
    (21) var_usage -> . ID

    COMMAND_RANDOM  shift and go to state 13
    VAL_LITERAL     shift and go to state 24
    CHAR_LITERAL    shift and go to state 21
    STRING_LITERAL  shift and go to state 11
    -               shift and go to state 27
    !               shift and go to state 9
    (               shift and go to state 6
    ID              shift and go to state 26

    var_usage                      shift and go to state 10
    expression                     shift and go to state 41

state 7

    (30) type -> ALIAS_TYPE .

    ID              reduce using rule 30 (type -> ALIAS_TYPE .)
    )               reduce using rule 30 (type -> ALIAS_TYPE .)


state 8

    (16) simple_declaration -> type . ID

    ID              shift and go to state 42


state 9

    (44) expression -> ! . expression
    (22) expression -> . var_usage = expression
    (23) expression -> . var_usage ASSIGN_ADD expression
    (24) expression -> . var_usage ASSIGN_SUB expression
    (25) expression -> . var_usage ASSIGN_MULT expression
    (26) expression -> . var_usage ASSIGN_DIV expression
    (27) expression -> . var_usage
    (28) expression -> . COMMAND_RANDOM ( expression )
    (32) expression -> . expression BOOL_AND expression
    (33) expression -> . expression BOOL_OR expression
    (34) expression -> . VAL_LITERAL
    (35) expression -> . CHAR_LITERAL
    (36) expression -> . STRING_LITERAL
    (37) expression -> . expression - expression
    (38) expression -> . expression * expression
    (39) expression -> . expression / expression
    (40) expression -> . expression + expression
    (41) expression -> . expression COMP_EQU expression
    (42) expression -> . expression COMP_NEQU expression
    (43) expression -> . - expression
    (44) expression -> . ! expression
    (45) expression -> . expression COMP_LESS expression
    (46) expression -> . expression COMP_GTR expression
    (47) expression -> . expression COMP_LTE expression
    (48) expression -> . expression COMP_GTE expression
    (49) expression -> . ( expression )
    (21) var_usage -> . ID

    COMMAND_RANDOM  shift and go to state 13
    VAL_LITERAL     shift and go to state 24
    CHAR_LITERAL    shift and go to state 21
    STRING_LITERAL  shift and go to state 11
    -               shift and go to state 27
    !               shift and go to state 9
    (               shift and go to state 6
    ID              shift and go to state 26

    var_usage                      shift and go to state 10
    expression                     shift and go to state 43

state 10

    (22) expression -> var_usage . = expression
    (23) expression -> var_usage . ASSIGN_ADD expression
    (24) expression -> var_usage . ASSIGN_SUB expression
    (25) expression -> var_usage . ASSIGN_MULT expression
    (26) expression -> var_usage . ASSIGN_DIV expression
    (27) expression -> var_usage .

    =               shift and go to state 44
    ASSIGN_ADD      shift and go to state 46
    ASSIGN_SUB      shift and go to state 45
    ASSIGN_MULT     shift and go to state 48
    ASSIGN_DIV      shift and go to state 47
    BOOL_AND        reduce using rule 27 (expression -> var_usage .)
    BOOL_OR         reduce using rule 27 (expression -> var_usage .)
    -               reduce using rule 27 (expression -> var_usage .)
    *               reduce using rule 27 (expression -> var_usage .)
    /               reduce using rule 27 (expression -> var_usage .)
    +               reduce using rule 27 (expression -> var_usage .)
    COMP_EQU        reduce using rule 27 (expression -> var_usage .)
    COMP_NEQU       reduce using rule 27 (expression -> var_usage .)
    COMP_LESS       reduce using rule 27 (expression -> var_usage .)
    COMP_GTR        reduce using rule 27 (expression -> var_usage .)
    COMP_LTE        reduce using rule 27 (expression -> var_usage .)
    COMP_GTE        reduce using rule 27 (expression -> var_usage .)
    ;               reduce using rule 27 (expression -> var_usage .)
    )               reduce using rule 27 (expression -> var_usage .)
    ,               reduce using rule 27 (expression -> var_usage .)


state 11

    (36) expression -> STRING_LITERAL .

    BOOL_AND        reduce using rule 36 (expression -> STRING_LITERAL .)
    BOOL_OR         reduce using rule 36 (expression -> STRING_LITERAL .)
    -               reduce using rule 36 (expression -> STRING_LITERAL .)
    *               reduce using rule 36 (expression -> STRING_LITERAL .)
    /               reduce using rule 36 (expression -> STRING_LITERAL .)
    +               reduce using rule 36 (expression -> STRING_LITERAL .)
    COMP_EQU        reduce using rule 36 (expression -> STRING_LITERAL .)
    COMP_NEQU       reduce using rule 36 (expression -> STRING_LITERAL .)
    COMP_LESS       reduce using rule 36 (expression -> STRING_LITERAL .)
    COMP_GTR        reduce using rule 36 (expression -> STRING_LITERAL .)
    COMP_LTE        reduce using rule 36 (expression -> STRING_LITERAL .)
    COMP_GTE        reduce using rule 36 (expression -> STRING_LITERAL .)
    ;               reduce using rule 36 (expression -> STRING_LITERAL .)
    )               reduce using rule 36 (expression -> STRING_LITERAL .)
    ,               reduce using rule 36 (expression -> STRING_LITERAL .)


state 12

    (5) statement -> COMMAND_BREAK . ;

    ;               shift and go to state 49


state 13

    (28) expression -> COMMAND_RANDOM . ( expression )

    (               shift and go to state 50


state 14

    (31) type -> META_TYPE . ( type )

    (               shift and go to state 51


state 15

    (11) print_statement -> COMMAND_PRINT . ( non_empty_comma_sep_expr )

    (               shift and go to state 52


state 16

    (9) statement -> declaration . ;

    ;               shift and go to state 53


state 17

    (15) declaration -> assign_declaration .

    ;               reduce using rule 15 (declaration -> assign_declaration .)


state 18

    (4) statement -> scopeupbro . { statements }

    {               shift and go to state 54


state 19

    (20) statement -> COMMAND_WHILE . ( expression ) statement

    (               shift and go to state 55


state 20

    (10) statement -> print_statement . ;

    ;               shift and go to state 56


state 21

    (35) expression -> CHAR_LITERAL .

    BOOL_AND        reduce using rule 35 (expression -> CHAR_LITERAL .)
    BOOL_OR         reduce using rule 35 (expression -> CHAR_LITERAL .)
    -               reduce using rule 35 (expression -> CHAR_LITERAL .)
    *               reduce using rule 35 (expression -> CHAR_LITERAL .)
    /               reduce using rule 35 (expression -> CHAR_LITERAL .)
    +               reduce using rule 35 (expression -> CHAR_LITERAL .)
    COMP_EQU        reduce using rule 35 (expression -> CHAR_LITERAL .)
    COMP_NEQU       reduce using rule 35 (expression -> CHAR_LITERAL .)
    COMP_LESS       reduce using rule 35 (expression -> CHAR_LITERAL .)
    COMP_GTR        reduce using rule 35 (expression -> CHAR_LITERAL .)
    COMP_LTE        reduce using rule 35 (expression -> CHAR_LITERAL .)
    COMP_GTE        reduce using rule 35 (expression -> CHAR_LITERAL .)
    ;               reduce using rule 35 (expression -> CHAR_LITERAL .)
    )               reduce using rule 35 (expression -> CHAR_LITERAL .)
    ,               reduce using rule 35 (expression -> CHAR_LITERAL .)


state 22

    (18) statement -> COMMAND_IF . ( expression ) statement
    (19) statement -> COMMAND_IF . ( expression ) statement COMMAND_ELSE statement

    (               shift and go to state 57


state 23

    (14) declaration -> simple_declaration .
    (17) assign_declaration -> simple_declaration . = expression

    ;               reduce using rule 14 (declaration -> simple_declaration .)
    =               shift and go to state 58


state 24

    (34) expression -> VAL_LITERAL .

    BOOL_AND        reduce using rule 34 (expression -> VAL_LITERAL .)
    BOOL_OR         reduce using rule 34 (expression -> VAL_LITERAL .)
    -               reduce using rule 34 (expression -> VAL_LITERAL .)
    *               reduce using rule 34 (expression -> VAL_LITERAL .)
    /               reduce using rule 34 (expression -> VAL_LITERAL .)
    +               reduce using rule 34 (expression -> VAL_LITERAL .)
    COMP_EQU        reduce using rule 34 (expression -> VAL_LITERAL .)
    COMP_NEQU       reduce using rule 34 (expression -> VAL_LITERAL .)
    COMP_LESS       reduce using rule 34 (expression -> VAL_LITERAL .)
    COMP_GTR        reduce using rule 34 (expression -> VAL_LITERAL .)
    COMP_LTE        reduce using rule 34 (expression -> VAL_LITERAL .)
    COMP_GTE        reduce using rule 34 (expression -> VAL_LITERAL .)
    ;               reduce using rule 34 (expression -> VAL_LITERAL .)
    )               reduce using rule 34 (expression -> VAL_LITERAL .)
    ,               reduce using rule 34 (expression -> VAL_LITERAL .)


state 25

    (3) statements -> statements statement .

    }               reduce using rule 3 (statements -> statements statement .)
    COMMAND_BREAK   reduce using rule 3 (statements -> statements statement .)
    ;               reduce using rule 3 (statements -> statements statement .)
    COMMAND_IF      reduce using rule 3 (statements -> statements statement .)
    COMMAND_WHILE   reduce using rule 3 (statements -> statements statement .)
    COMMAND_RANDOM  reduce using rule 3 (statements -> statements statement .)
    VAL_LITERAL     reduce using rule 3 (statements -> statements statement .)
    CHAR_LITERAL    reduce using rule 3 (statements -> statements statement .)
    STRING_LITERAL  reduce using rule 3 (statements -> statements statement .)
    -               reduce using rule 3 (statements -> statements statement .)
    !               reduce using rule 3 (statements -> statements statement .)
    (               reduce using rule 3 (statements -> statements statement .)
    COMMAND_PRINT   reduce using rule 3 (statements -> statements statement .)
    ID              reduce using rule 3 (statements -> statements statement .)
    TYPE            reduce using rule 3 (statements -> statements statement .)
    ALIAS_TYPE      reduce using rule 3 (statements -> statements statement .)
    META_TYPE       reduce using rule 3 (statements -> statements statement .)
    {               reduce using rule 3 (statements -> statements statement .)
    $end            reduce using rule 3 (statements -> statements statement .)


state 26

    (21) var_usage -> ID .

    =               reduce using rule 21 (var_usage -> ID .)
    ASSIGN_ADD      reduce using rule 21 (var_usage -> ID .)
    ASSIGN_SUB      reduce using rule 21 (var_usage -> ID .)
    ASSIGN_MULT     reduce using rule 21 (var_usage -> ID .)
    ASSIGN_DIV      reduce using rule 21 (var_usage -> ID .)
    BOOL_AND        reduce using rule 21 (var_usage -> ID .)
    BOOL_OR         reduce using rule 21 (var_usage -> ID .)
    -               reduce using rule 21 (var_usage -> ID .)
    *               reduce using rule 21 (var_usage -> ID .)
    /               reduce using rule 21 (var_usage -> ID .)
    +               reduce using rule 21 (var_usage -> ID .)
    COMP_EQU        reduce using rule 21 (var_usage -> ID .)
    COMP_NEQU       reduce using rule 21 (var_usage -> ID .)
    COMP_LESS       reduce using rule 21 (var_usage -> ID .)
    COMP_GTR        reduce using rule 21 (var_usage -> ID .)
    COMP_LTE        reduce using rule 21 (var_usage -> ID .)
    COMP_GTE        reduce using rule 21 (var_usage -> ID .)
    ;               reduce using rule 21 (var_usage -> ID .)
    )               reduce using rule 21 (var_usage -> ID .)
    ,               reduce using rule 21 (var_usage -> ID .)


state 27

    (43) expression -> - . expression
    (22) expression -> . var_usage = expression
    (23) expression -> . var_usage ASSIGN_ADD expression
    (24) expression -> . var_usage ASSIGN_SUB expression
    (25) expression -> . var_usage ASSIGN_MULT expression
    (26) expression -> . var_usage ASSIGN_DIV expression
    (27) expression -> . var_usage
    (28) expression -> . COMMAND_RANDOM ( expression )
    (32) expression -> . expression BOOL_AND expression
    (33) expression -> . expression BOOL_OR expression
    (34) expression -> . VAL_LITERAL
    (35) expression -> . CHAR_LITERAL
    (36) expression -> . STRING_LITERAL
    (37) expression -> . expression - expression
    (38) expression -> . expression * expression
    (39) expression -> . expression / expression
    (40) expression -> . expression + expression
    (41) expression -> . expression COMP_EQU expression
    (42) expression -> . expression COMP_NEQU expression
    (43) expression -> . - expression
    (44) expression -> . ! expression
    (45) expression -> . expression COMP_LESS expression
    (46) expression -> . expression COMP_GTR expression
    (47) expression -> . expression COMP_LTE expression
    (48) expression -> . expression COMP_GTE expression
    (49) expression -> . ( expression )
    (21) var_usage -> . ID

    COMMAND_RANDOM  shift and go to state 13
    VAL_LITERAL     shift and go to state 24
    CHAR_LITERAL    shift and go to state 21
    STRING_LITERAL  shift and go to state 11
    -               shift and go to state 27
    !               shift and go to state 9
    (               shift and go to state 6
    ID              shift and go to state 26

    var_usage                      shift and go to state 10
    expression                     shift and go to state 59

state 28

    (45) expression -> expression COMP_LESS . expression
    (22) expression -> . var_usage = expression
    (23) expression -> . var_usage ASSIGN_ADD expression
    (24) expression -> . var_usage ASSIGN_SUB expression
    (25) expression -> . var_usage ASSIGN_MULT expression
    (26) expression -> . var_usage ASSIGN_DIV expression
    (27) expression -> . var_usage
    (28) expression -> . COMMAND_RANDOM ( expression )
    (32) expression -> . expression BOOL_AND expression
    (33) expression -> . expression BOOL_OR expression
    (34) expression -> . VAL_LITERAL
    (35) expression -> . CHAR_LITERAL
    (36) expression -> . STRING_LITERAL
    (37) expression -> . expression - expression
    (38) expression -> . expression * expression
    (39) expression -> . expression / expression
    (40) expression -> . expression + expression
    (41) expression -> . expression COMP_EQU expression
    (42) expression -> . expression COMP_NEQU expression
    (43) expression -> . - expression
    (44) expression -> . ! expression
    (45) expression -> . expression COMP_LESS expression
    (46) expression -> . expression COMP_GTR expression
    (47) expression -> . expression COMP_LTE expression
    (48) expression -> . expression COMP_GTE expression
    (49) expression -> . ( expression )
    (21) var_usage -> . ID

    COMMAND_RANDOM  shift and go to state 13
    VAL_LITERAL     shift and go to state 24
    CHAR_LITERAL    shift and go to state 21
    STRING_LITERAL  shift and go to state 11
    -               shift and go to state 27
    !               shift and go to state 9
    (               shift and go to state 6
    ID              shift and go to state 26

    var_usage                      shift and go to state 10
    expression                     shift and go to state 60

state 29

    (40) expression -> expression + . expression
    (22) expression -> . var_usage = expression
    (23) expression -> . var_usage ASSIGN_ADD expression
    (24) expression -> . var_usage ASSIGN_SUB expression
    (25) expression -> . var_usage ASSIGN_MULT expression
    (26) expression -> . var_usage ASSIGN_DIV expression
    (27) expression -> . var_usage
    (28) expression -> . COMMAND_RANDOM ( expression )
    (32) expression -> . expression BOOL_AND expression
    (33) expression -> . expression BOOL_OR expression
    (34) expression -> . VAL_LITERAL
    (35) expression -> . CHAR_LITERAL
    (36) expression -> . STRING_LITERAL
    (37) expression -> . expression - expression
    (38) expression -> . expression * expression
    (39) expression -> . expression / expression
    (40) expression -> . expression + expression
    (41) expression -> . expression COMP_EQU expression
    (42) expression -> . expression COMP_NEQU expression
    (43) expression -> . - expression
    (44) expression -> . ! expression
    (45) expression -> . expression COMP_LESS expression
    (46) expression -> . expression COMP_GTR expression
    (47) expression -> . expression COMP_LTE expression
    (48) expression -> . expression COMP_GTE expression
    (49) expression -> . ( expression )
    (21) var_usage -> . ID

    COMMAND_RANDOM  shift and go to state 13
    VAL_LITERAL     shift and go to state 24
    CHAR_LITERAL    shift and go to state 21
    STRING_LITERAL  shift and go to state 11
    -               shift and go to state 27
    !               shift and go to state 9
    (               shift and go to state 6
    ID              shift and go to state 26

    var_usage                      shift and go to state 10
    expression                     shift and go to state 61

state 30

    (48) expression -> expression COMP_GTE . expression
    (22) expression -> . var_usage = expression
    (23) expression -> . var_usage ASSIGN_ADD expression
    (24) expression -> . var_usage ASSIGN_SUB expression
    (25) expression -> . var_usage ASSIGN_MULT expression
    (26) expression -> . var_usage ASSIGN_DIV expression
    (27) expression -> . var_usage
    (28) expression -> . COMMAND_RANDOM ( expression )
    (32) expression -> . expression BOOL_AND expression
    (33) expression -> . expression BOOL_OR expression
    (34) expression -> . VAL_LITERAL
    (35) expression -> . CHAR_LITERAL
    (36) expression -> . STRING_LITERAL
    (37) expression -> . expression - expression
    (38) expression -> . expression * expression
    (39) expression -> . expression / expression
    (40) expression -> . expression + expression
    (41) expression -> . expression COMP_EQU expression
    (42) expression -> . expression COMP_NEQU expression
    (43) expression -> . - expression
    (44) expression -> . ! expression
    (45) expression -> . expression COMP_LESS expression
    (46) expression -> . expression COMP_GTR expression
    (47) expression -> . expression COMP_LTE expression
    (48) expression -> . expression COMP_GTE expression
    (49) expression -> . ( expression )
    (21) var_usage -> . ID

    COMMAND_RANDOM  shift and go to state 13
    VAL_LITERAL     shift and go to state 24
    CHAR_LITERAL    shift and go to state 21
    STRING_LITERAL  shift and go to state 11
    -               shift and go to state 27
    !               shift and go to state 9
    (               shift and go to state 6
    ID              shift and go to state 26

    var_usage                      shift and go to state 10
    expression                     shift and go to state 62

state 31

    (8) statement -> expression ; .

    COMMAND_BREAK   reduce using rule 8 (statement -> expression ; .)
    ;               reduce using rule 8 (statement -> expression ; .)
    COMMAND_IF      reduce using rule 8 (statement -> expression ; .)
    COMMAND_WHILE   reduce using rule 8 (statement -> expression ; .)
    COMMAND_RANDOM  reduce using rule 8 (statement -> expression ; .)
    VAL_LITERAL     reduce using rule 8 (statement -> expression ; .)
    CHAR_LITERAL    reduce using rule 8 (statement -> expression ; .)
    STRING_LITERAL  reduce using rule 8 (statement -> expression ; .)
    -               reduce using rule 8 (statement -> expression ; .)
    !               reduce using rule 8 (statement -> expression ; .)
    (               reduce using rule 8 (statement -> expression ; .)
    COMMAND_PRINT   reduce using rule 8 (statement -> expression ; .)
    ID              reduce using rule 8 (statement -> expression ; .)
    TYPE            reduce using rule 8 (statement -> expression ; .)
    ALIAS_TYPE      reduce using rule 8 (statement -> expression ; .)
    META_TYPE       reduce using rule 8 (statement -> expression ; .)
    {               reduce using rule 8 (statement -> expression ; .)
    $end            reduce using rule 8 (statement -> expression ; .)
    }               reduce using rule 8 (statement -> expression ; .)
    COMMAND_ELSE    reduce using rule 8 (statement -> expression ; .)


state 32

    (33) expression -> expression BOOL_OR . expression
    (22) expression -> . var_usage = expression
    (23) expression -> . var_usage ASSIGN_ADD expression
    (24) expression -> . var_usage ASSIGN_SUB expression
    (25) expression -> . var_usage ASSIGN_MULT expression
    (26) expression -> . var_usage ASSIGN_DIV expression
    (27) expression -> . var_usage
    (28) expression -> . COMMAND_RANDOM ( expression )
    (32) expression -> . expression BOOL_AND expression
    (33) expression -> . expression BOOL_OR expression
    (34) expression -> . VAL_LITERAL
    (35) expression -> . CHAR_LITERAL
    (36) expression -> . STRING_LITERAL
    (37) expression -> . expression - expression
    (38) expression -> . expression * expression
    (39) expression -> . expression / expression
    (40) expression -> . expression + expression
    (41) expression -> . expression COMP_EQU expression
    (42) expression -> . expression COMP_NEQU expression
    (43) expression -> . - expression
    (44) expression -> . ! expression
    (45) expression -> . expression COMP_LESS expression
    (46) expression -> . expression COMP_GTR expression
    (47) expression -> . expression COMP_LTE expression
    (48) expression -> . expression COMP_GTE expression
    (49) expression -> . ( expression )
    (21) var_usage -> . ID

    COMMAND_RANDOM  shift and go to state 13
    VAL_LITERAL     shift and go to state 24
    CHAR_LITERAL    shift and go to state 21
    STRING_LITERAL  shift and go to state 11
    -               shift and go to state 27
    !               shift and go to state 9
    (               shift and go to state 6
    ID              shift and go to state 26

    var_usage                      shift and go to state 10
    expression                     shift and go to state 63

state 33

    (41) expression -> expression COMP_EQU . expression
    (22) expression -> . var_usage = expression
    (23) expression -> . var_usage ASSIGN_ADD expression
    (24) expression -> . var_usage ASSIGN_SUB expression
    (25) expression -> . var_usage ASSIGN_MULT expression
    (26) expression -> . var_usage ASSIGN_DIV expression
    (27) expression -> . var_usage
    (28) expression -> . COMMAND_RANDOM ( expression )
    (32) expression -> . expression BOOL_AND expression
    (33) expression -> . expression BOOL_OR expression
    (34) expression -> . VAL_LITERAL
    (35) expression -> . CHAR_LITERAL
    (36) expression -> . STRING_LITERAL
    (37) expression -> . expression - expression
    (38) expression -> . expression * expression
    (39) expression -> . expression / expression
    (40) expression -> . expression + expression
    (41) expression -> . expression COMP_EQU expression
    (42) expression -> . expression COMP_NEQU expression
    (43) expression -> . - expression
    (44) expression -> . ! expression
    (45) expression -> . expression COMP_LESS expression
    (46) expression -> . expression COMP_GTR expression
    (47) expression -> . expression COMP_LTE expression
    (48) expression -> . expression COMP_GTE expression
    (49) expression -> . ( expression )
    (21) var_usage -> . ID

    COMMAND_RANDOM  shift and go to state 13
    VAL_LITERAL     shift and go to state 24
    CHAR_LITERAL    shift and go to state 21
    STRING_LITERAL  shift and go to state 11
    -               shift and go to state 27
    !               shift and go to state 9
    (               shift and go to state 6
    ID              shift and go to state 26
